--- a/server/composer.json
+++ b/server/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "react/react": "0.4.*"
+        "react/react": "0.4.*",
+        "cboden/ratchet": "0.3.*"
     },
     "autoload": {
         "psr-4" : {
